[gd_scene load_steps=4 format=3 uid="uid://dfdpeoonaw84d"]

[ext_resource type="Script" path="res://Scripts/login.gd" id="1_ajm77"]
[ext_resource type="Theme" uid="uid://dvmgjyprf2q1u" path="res://Fonts/label_font.tres" id="2_bvev5"]

[sub_resource type="Theme" id="Theme_ex5vm"]
default_font_size = 20

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ajm77")

[node name="UsernameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 390.0
offset_right = 1120.0
offset_bottom = 465.0
theme = ExtResource("2_bvev5")
placeholder_text = "Username"
alignment = 1

[node name="PasswordInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 490.0
offset_right = 1120.0
offset_bottom = 565.0
theme = ExtResource("2_bvev5")
placeholder_text = "Password"
alignment = 1
secret = true

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 648.0
offset_right = 1000.0
offset_bottom = 723.0
theme = ExtResource("2_bvev5")
text = "Log in"

[node name="RegisterLink" type="Button" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 570.0
offset_right = 866.0
offset_bottom = 602.0
theme_type_variation = &"FlatButton"

[node name="RichTextLabel" type="RichTextLabel" parent="RegisterLink"]
show_behind_parent = true
layout_mode = 0
offset_right = 248.0
offset_bottom = 30.0
mouse_filter = 2
theme = SubResource("Theme_ex5vm")
bbcode_enabled = true
text = "[u]Don't have an account?[/u]"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
